Tweaked DataTable config, started adding message flashing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1179,6 +1179,15 @@ select {
   position: absolute;
   width: 1px;
 }
+.p-datatable {
+  font-size: 0.9rem !important;
+}
+.p-inputtext {
+  padding: 0.5rem !important;
+}
+.p-datatable .p-sortable-column.p-highlight {
+  background-color: transparent !important;
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
