Changed some styling

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -14,7 +14,7 @@
     width: 1px;
 }
 
-.p-datatable {
+.p-datatable, .p-button, .p-component, .p-inputtext {
     font-size: 0.9rem !important;
 }
 
