--- a/public/css/app.css
+++ b/public/css/app.css
@@ -764,6 +764,12 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-80 {
+  width: 20rem;
+}
+.w-5\/6 {
+  width: 83.333333%;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
