--- a/public/css/app.css
+++ b/public/css/app.css
@@ -761,14 +761,11 @@ select {
 .w-6 {
   width: 1.5rem;
 }
-.w-20 {
-  width: 5rem;
-}
-.w-80 {
-  width: 20rem;
-}
 .w-5\/6 {
   width: 83.333333%;
+}
+.w-20 {
+  width: 5rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -1225,6 +1222,9 @@ select {
 }
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+html {
+  font-size: 14pt;
 }
 .p-hidden-accessible {
   /* display: none; */
