--- a/public/css/app.css
+++ b/public/css/app.css
@@ -834,6 +834,9 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
+.break-all {
+  word-break: break-all;
+}
 .rounded-md {
   border-radius: 0.375rem;
 }
