--- a/public/css/app.css
+++ b/public/css/app.css
@@ -664,6 +664,9 @@ select {
 .m-0 {
   margin: 0px;
 }
+.m-auto {
+  margin: auto;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1394,6 +1397,10 @@ h2 {
 
   .sm\:h-20 {
     height: 5rem;
+  }
+
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:max-w-md {
