Improved styling across the board, made dashboard richer user experience

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,6 +6,10 @@ html {
     font-size: 14pt;
 }
 
+body {
+    background-color: var(--surface-ground);
+}
+
 .p-hidden-accessible {
     /* display: none; */
     border: 0;
