--- a/public/css/app.css
+++ b/public/css/app.css
@@ -713,6 +713,9 @@ select {
 .mr-5 {
   margin-right: 1.25rem;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -784,9 +787,6 @@ select {
 }
 .w-20 {
   width: 5rem;
-}
-.w-6 {
-  width: 1.5rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -1203,6 +1203,9 @@ select {
 }
 html {
   font-size: 14pt;
+}
+body {
+  background-color: var(--surface-ground);
 }
 .p-hidden-accessible {
   /* display: none; */
