--- a/public/css/app.css
+++ b/public/css/app.css
@@ -728,9 +728,6 @@ select {
 .mr-6 {
   margin-right: 1.5rem;
 }
-.mr-4 {
-  margin-right: 1rem;
-}
 .block {
   display: block;
 }
@@ -1224,6 +1221,11 @@ h2 {
 }
 .p-datatable-tbody > tr > td {
   padding: 0.25rem 0.5rem !important;
+}
+.p-info-item-header {
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
