--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -41,3 +41,9 @@ h2 {
 .p-datatable-tbody>tr>td {
     padding: 0.25rem 0.5rem !important;
 }
+
+.p-info-item-header {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    font-weight: 600;
+}
