--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -47,3 +47,12 @@ h2 {
     text-transform: uppercase;
     font-weight: 600;
 }
+
+::v-deep .in-exception {
+    background-color: var(--red-200) !important;
+}
+
+::v-deep .is-sub {
+    background-color: var(--yellow-300) !important;
+    color: var(--yellow-900) !important;
+}
