--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+
 html {
     font-size: 14pt;
 }
@@ -50,6 +51,16 @@ a:hover {
 
 h2 {
     font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
+h4 {
+    font-size: 1.15rem;
+    font-weight: 500;
 }
 
 .p-datatable-tbody>tr>td {
