--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -28,6 +28,7 @@ html .p-menubar .p-menuitem-link .p-menuitem-text {
 html .p-menubar {
     background-color: transparent;
     border: 0;
+    border-radius: 0;
 }
 
 a:hover {
