--- a/public/css/app.css
+++ b/public/css/app.css
@@ -792,9 +792,6 @@ select {
 .w-full {
   width: 100%;
 }
-.w-5\/6 {
-  width: 83.333333%;
-}
 .w-20 {
   width: 5rem;
 }
@@ -804,14 +801,11 @@ select {
 .max-w-xl {
   max-width: 36rem;
 }
-.max-w-screen-2xl {
-  max-width: 1536px;
-}
-.max-w-2xl {
-  max-width: 42rem;
-}
 .max-w-7xl {
   max-width: 80rem;
+}
+.max-w-screen-2xl {
+  max-width: 1536px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -849,6 +843,9 @@ select {
 }
 .list-inside {
   list-style-position: inside;
+}
+.list-outside {
+  list-style-position: outside;
 }
 .list-disc {
   list-style-type: disc;
@@ -1024,6 +1021,9 @@ select {
 .pt-6 {
   padding-top: 1.5rem;
 }
+.pl-4 {
+  padding-left: 1rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1068,9 +1068,6 @@ select {
 }
 .font-semibold {
   font-weight: 600;
-}
-.font-bold {
-  font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1243,6 +1240,12 @@ html .p-menubar {
   background-color: transparent;
   border: 0;
   border-radius: 0;
+}
+a {
+  cursor: pointer;
+}
+a:active {
+  color: var(--gray-700);
 }
 a:hover {
   text-decoration: underline;
