--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -31,6 +31,14 @@ html .p-menubar {
     border-radius: 0;
 }
 
+a {
+    cursor: pointer;
+}
+
+a:active {
+    color: var(--gray-700);
+}
+
 a:hover {
     text-decoration: underline;
 }
