--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1574,6 +1574,11 @@ h4 {
     padding-left: 1rem;
     padding-right: 1rem;
   }
+
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
 }
 @media (min-width: 1024px) {
 
