--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -95,6 +95,11 @@ h4 {
     font-weight: 500;
 }
 
+h5 {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
 .p-datatable-tbody>tr>td {
     padding: 0.25rem 0.5rem !important;
 }
