--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -119,4 +119,8 @@ h5 {
     color: var(--yellow-900) !important;
 }
 
+html tr.no-associated-driver {
+    background-color: var(--red-100) !important;
+}
+
 $text-color: #3d4852;
